Time: 2 ms (39.43%), Space: 45.5 MB (49.19%) - LeetHub